--- a/bumba/css/style.css
+++ b/bumba/css/style.css
@@ -179,11 +179,6 @@ main{
 }
 .banner-text-container button{
     margin: 40px 0px 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 6.4px 15px;
-    gap: 8px;
     width: 200px;
     height: 50px;
     background: #231F20;
@@ -199,7 +194,7 @@ section.projects{
     position: relative;
     z-index: 0;
     background-color: #231F20;
-    padding: 20px 0px 60px;
+    padding: 20px 0px 10px;
 }
 section.projects img{
     width: 100% !important;
@@ -208,6 +203,7 @@ section.projects img{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    padding: 40px 0px;
 }
 .projects-container .left h2{
     font-family: Gotham-Book;
@@ -222,8 +218,8 @@ section.projects img{
     font-family: Gotham-Book;
     font-style: normal;
     font-weight: 400;
-    font-size: 19.7396px;
-    line-height: 24px;
+    font-size: 20px;
+    line-height: 32px;
     text-align: justify;
     color: #FFFFFF;
     width: 100%;
@@ -231,9 +227,6 @@ section.projects img{
     margin: 20px 0px;
 }
 .projects-container .left button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 200px;
     height: 50px;
     background: #F7941E;
@@ -245,4 +238,91 @@ section.projects img{
     font-size: 16px;
     font-family: Gotham-Medium;
     margin: 20px 0px 0px;
+}
+section.about{
+    position: relative;
+    z-index: 0;
+    background-color: #ffffff;
+    padding: 20px 0px 10px;
+}
+section.about img{
+    width: 100% !important;
+}
+.about-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 40px 0px;
+}
+.about-container .right h2{
+    font-family: Gotham-Book;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 52px;
+    line-height: 49px;
+    color: #231F20;
+    margin: 0px 0px 40px;
+}
+.about-container .right p{
+    font-family: Gotham-Book;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
+    text-align: justify;
+    color: #231F20;
+    width: 100%;
+    max-width: 370px;
+    margin: 20px 0px;
+}
+.about-container .right button{
+    width: 200px;
+    height: 50px;
+    background: #F7941E;
+    border: 1px solid #F2F2F2;
+    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.016);
+    border-radius: 8px;
+    outline: none;
+    color: #231F20;
+    font-size: 16px;
+    font-family: Gotham-Medium;
+    margin: 20px 0px 0px;
+}
+footer{
+    padding: 40px 0px 80px;
+    background-color: #F7941E;
+    background-image: url('img/footer\ background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+footer .socials{
+    padding: 10px 0px 20px;
+}
+footer .socials a{
+    padding: 2px;
+    margin: 0px 2px;
+}
+footer .footer-links{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 0px 0px;
+}
+.footer-links .col .link{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 10px;
+}
+.footer-links .col .link .icon{
+    margin: 0px 10px 0px 0px;
+}
+.footer-links .col .link a{
+    padding: 2px;
+    color: #ffffff;
+    text-decoration: none;
+    font-family: Gotham-Book;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 20px;
 }
