--- a/bumba/css/style.css
+++ b/bumba/css/style.css
@@ -136,7 +136,7 @@ main{
     width: 100%;
 }
 .banner{
-    height: 100vh;
+    height: 700px;
     position: relative;
     z-index: 0;
 }
@@ -163,7 +163,7 @@ main{
     position: absolute;
     right: 0px !important;
     top: 0px;
-    height: 100vh;
+    height: 700px;
 }
 .banner-image img{
     height: 100% !important;
