--- a/bumba/css/style.css
+++ b/bumba/css/style.css
@@ -414,12 +414,29 @@ section.team{
     color: #231F20;
     font-family: Gotham-Medium;
 }
-.member-info p{
+.member-info p:nth-child(2){
     text-align: center;
     font-size: 16px;
     line-height: 15px;
     color: #ED1D24;
     font-family: Gotham-Book;
+    padding: 10px;
+}
+.member-info p:nth-child(3){
+    text-align: justify;
+    font-size: 16px;
+    line-height: 20px;
+    color: #231F20;
+    font-family: Gotham-Book;
+    padding: 10px 0px;
+}
+.member-info a:nth-child(4){
+    text-align: justify;
+    font-size: 18px;
+    line-height: 20px;
+    color: #F7941E;
+    font-family: Gotham-Book;
+    padding: 10px 0px;
 }
 section.team .meet{
     padding: 20px 0px 0px;
@@ -479,3 +496,12 @@ footer .footer-links{
     font-size: 20px;
     line-height: 20px;
 }
+
+
+
+
+/* === ABout Page == */
+.team-head h1{
+    text-align: left !important;
+}
+/* === || ABout Page == */
