--- a/bumba/css/style.css
+++ b/bumba/css/style.css
@@ -828,6 +828,179 @@ section.portfolio .row .huge-pic-two img{
 /* === || Blog Page == */
 
 /* === Blog Content Page == */
+main.blog-content nav .left{
+    background-color: #FCFCFC !important;
+}
+main.blog-content .banner{
+    height: 128px;
+    position: relative;
+    background-color: #FCFCFC;
+}
+.blog-contents{
+    background-color: #FCFCFC;
+    padding: 0px 0px 40px;
+}
+.blog-contents .blog-text{
+    width: 60%;
+    min-width: 280px;
+    margin: auto;
+}
+.blog-contents .blog-text .headline{
+    width: fit-content;
+    padding: 5px 10px 5px 0px;
+    border-bottom: 1px solid red;
+    margin: 0px 0px 16px;
+}
+.blog-contents .blog-text .headline p{
+    font-family: Gotham-Book;
+    font-size: 20px;
+    line-height: 32px;
+    color: #ED1D24;
+}
+.blog-contents .blog-text h1{
+    font-family: Gotham-Medium;
+    font-size: 84px;
+    line-height: 80px;
+    margin: 20px;
+    color: #231F20;
+}
+.blog-contents .blog-text p.headp{
+    font-family: Gotham-Book;
+    font-style: normal;
+    text-align: justify;
+    width: 100%;
+    max-width: 100%;
+    margin: 32px 0px 16px;
 
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 32px;
+
+    /* black */
+
+    color: #231F20;
+}
+.blog-contents .blog-images{
+    width: 80%;
+    min-width: 280px;
+    margin: auto;
+    padding: 20px;
+}
+.blog-contents .blog-images img{
+    width: 100% !important;
+}
+.blog-contents .blog-text p.blur{
+    font-family: Gotham-Book;
+    font-style: normal;
+    text-align: justify;
+    width: 100%;
+    max-width: 100%;
+    margin: 16px 0px;
+
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
+
+    /* black */
+
+    color: #828282;
+}
+.related-stories{
+    background-color: #ffffff;
+}
+.story-head{
+    padding: 100px 0px 40px;
+}
+.story-head h1{
+    font-family: Gotham-Book;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 52px;
+    line-height: 50px;
+    text-align: center;
+
+    /* black */
+
+    color: #231F20;
+}
+
+.stories-content{
+    height: fit-content;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-evenly;
+}
+.story.story-one{
+    height: fit-content;
+    padding: 10px;
+}
+.story.story-one img{
+    width: 100%;
+    max-width: 320px;
+    min-width: 280px;
+}
+.story.story-info{
+    padding: 10px 0px;
+}
+.story .story-info .headline{
+    width: fit-content;
+    padding: 5px 10px 5px 0px;
+    border-bottom: 1px solid red;
+    margin: 0px 0px 16px;
+}
+.story .story-info .headline p{
+    font-family: Gotham-Book;
+    font-size: 20px;
+    line-height: 32px;
+    color: #ED1D24;
+}
+.story .story-info a:nth-child(2){
+    font-family: Gotham-Book;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 32px;
+    color: #231F20;
+    text-decoration: none;
+    padding: 14px 0px;
+}
+.story .story-info a:nth-child(2):hover{
+    color: #ED1D24;
+}
+.story .story-info p:nth-child(3){
+    font-family: Gotham-Book;
+    font-size: 20px;
+    line-height: 32px;
+    color: #828282;
+    margin: 16px 0px 10px;
+}
+.stories-pagination{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+.stories-pagination .number.active,
+.stories-pagination .number:hover{
+    background: #000000;
+}
+.stories-pagination .number{
+    transition: all 500ms;
+    height: 50px;
+    width: 50px;
+    color: #F7941E;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.stories-pagination .number span{
+    font-family: Gotham-Book;
+    font-size: 20px;
+    line-height: 32px;
+    color: #F7941E;
+}
+.blg-content-image{
+    margin: 80px 0px 0px;
+}
 /* === || Blog Content Page == */
 
