--- a/bumba/css/style.css
+++ b/bumba/css/style.css
@@ -214,7 +214,7 @@ main{
 .banner .rectangle{
     height: 160px;
     width: 350px;
-    background-color: #ffffff99;
+    background-color: #ffffff;
     position: absolute;
     bottom: -160px;
     right: 0px;
