--- a/bumba/css/style.css
+++ b/bumba/css/style.css
@@ -65,8 +65,6 @@ body{
 }
 
 nav{
-    height: 128px;
-    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -75,8 +73,6 @@ nav{
     z-index: 16;
 }
 nav .left{
-    height: 100%;
-    width: 40% !important;
     background-color: #ffffff;
     display: flex;
     align-items: center;
@@ -102,8 +98,6 @@ nav .left .menu button i{
     color: #000000;
 }
 nav .right{
-    height: 100%;
-    width: 60% !important;
     background-color: #00000000;
     display: flex;
     align-items: center;
@@ -181,15 +175,9 @@ main{
     justify-content: flex-start;
 }
 .menu-links .links .menu-link{
-    height: fit-content;
-    width: 100%;
-    max-width: 700px;
-    min-width: 280px;
     position: relative;
-    padding: 20px 100px 20px 100px;
 }
 .menu-links .links .menu-link a{
-    font-size: 50px;
     padding: 10px 0px;
     color: #ffffff;
     font-family: Gotham-Medium;
@@ -198,11 +186,8 @@ main{
 }
 .menu-links .links .menu-link .closebtn{
     position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 50px;
-    color: #ffffff;
     background-color: #00000000;
+    color: #ffffff;
     outline: none;
     border: 0px;
 }
@@ -260,7 +245,6 @@ main{
 }
 .banner-text-container{
     height: 100%;
-    padding: 220px 0px 20px;
     position: relative;
     z-index: 10;
 }
@@ -306,7 +290,14 @@ section.projects img{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     padding: 40px 0px;
+}
+.projects-container .left{
+    margin: 20px 20px;
+}
+.projects-container .right{
+    margin: 20px 20px;
 }
 .projects-container .left h2{
     font-family: Gotham-Book;
@@ -355,7 +346,14 @@ section.about img{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     padding: 40px 0px;
+}
+.about-container .left{
+    margin: 20px 20px;
+}
+.about-container .right{
+    margin: 20px 20px;
 }
 .about-container .right h2{
     font-family: Gotham-Book;
@@ -411,6 +409,8 @@ section.team{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 10px 15px;
 }
 .member{
     height: fit-content;
@@ -490,6 +490,10 @@ footer .footer{
 footer .socials{
     padding: 10px 0px 20px;
 }
+
+footer .social-hold{
+    width: fit-content;
+}
 footer .socials a{
     padding: 2px;
     margin: 0px 2px;
@@ -497,20 +501,27 @@ footer .socials a{
 footer .footer-links{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    flex-wrap: wrap;
     padding: 20px 0px 0px;
+}
+.footer-links .col{
+    width: 100%;
+    max-width: 320px;
+    min-width: 280px;
+    margin: 20px 0px;
 }
 .footer-links .col .link{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
+    text-align: left;
     padding: 10px 10px;
 }
 .footer-links .col .link .icon{
     margin: 0px 10px 0px 0px;
 }
 .footer-links .col .link a{
-    padding: 2px;
+    padding: 4px 16px;
     color: #ffffff;
     text-decoration: none;
     font-family: Gotham-Book;
@@ -800,11 +811,10 @@ section.portfolio .twafane{
  
     grid-row-end: 3;
     grid-column-end: 5;
-    
+    overflow: hidden;
  }
  #item-2-skin img{
-    margin-left: 17px;
-    margin-top: 10px;
+    height: 100%;
  }
 
 #twafane{
@@ -851,7 +861,11 @@ section.portfolio .twafane{
  
     grid-row-end: 3;
     grid-column-end: 4;
+    overflow: hidden;
     
+ }
+ #item-2 img{
+    width: 100%;
  }
  #item-3 {
  
@@ -871,10 +885,10 @@ section.portfolio .twafane{
  
     grid-row-end: 3;
     grid-column-end: 5;
-    
+    overflow: hidden;
  }
  #item-4  img{
-    margin: 15px 0px 0px 0px;
+    width: 100%;
  }
  #tttext p{
     font-family: Gotham-Book;
@@ -1166,3 +1180,232 @@ main.blog-content .banner{
 }
 /* === || Blog Content Page == */
 
+/* Extra small devices (phones, 600px and down) */
+@media screen and  (max-width: 400px) {
+    nav .left{
+        padding: 0px 15px;
+    }
+    nav .right{
+        padding: 0px 15px;
+    }
+}
+
+@media screen and (min-width: 0px) and  (max-width: 600px) {
+    nav{
+        flex-wrap: wrap;
+        height: 256px;
+    }
+    nav .left{
+        height: 50%;
+        width: 100% !important;
+        max-width: 600px;
+        min-width: 280px;
+    }
+    nav .right{
+        height: 50%;
+        width: 100% !important;
+        max-width: 600px;
+        min-width: 280px;
+        padding: 0px 40px !important;
+    }
+    .banner-text-container{
+        padding: 240px 15px 20px;
+    }
+    .banner-image .image-mask{
+        background: linear-gradient(90deg, 
+        rgb(247, 148, 30) 20%, 
+        rgba(247, 148, 30, 0.89) 40%, 
+        rgba(247, 148, 30, 0.55) 60%, 
+        rgba(247, 148, 30, 0.89) 80%,
+        rgb(247, 148, 30) 100% ) !important;
+    }
+    .banner-text-container h1:nth-child(1){
+        font-size: 50px !important;
+        line-height: 50px !important;
+        font-weight: 500 !important;
+    }
+    .banner-text-container p:nth-child(2){
+        font-size: 18px !important;
+        line-height: 30px !important;
+        min-width: 280px !important;
+    }
+    .banner-text-container button{
+        margin: 20px 0px 0px;
+    }
+    footer .footer .socials{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    footer .footer-links{
+        padding: 0px 15px;
+        justify-content: space-evenly;
+    }
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */ 
+@media screen and (max-width: 767px) and (min-width: 601px) {
+    nav{
+        flex-wrap: wrap;
+        height: 256px;
+    }
+    nav .left{
+        height: 50%;
+        width: 100% !important;
+        max-width: 767px;
+        min-width: 600px;
+    }
+    nav .right{
+        height: 50%;
+        width: 100% !important;
+        max-width: 767px;
+        min-width: 600px;
+        padding: 0px 40px !important;
+    }
+    .menu-links .image{
+        width: 10%;
+    }
+    .menu-links .links{
+        width: 90%;
+    }
+    .menu-links .links .menu-link{
+        height: fit-content;
+        width: 100%;
+        max-width: 700px;
+        min-width: 280px;
+        padding: 20px 100px 20px 100px;
+    }
+    .menu-links .links .menu-link a{
+        font-size: 50px;
+    }
+    .menu-links .links .menu-link .closebtn{
+        top: 10px;
+        right: 40px;
+        font-size: 50px;
+    }
+    .banner-text-container{
+        padding: 280px 40px 20px;
+    }
+    .banner-image .image-mask{
+        background: linear-gradient(90deg, 
+        rgb(247, 148, 30) 20%, 
+        rgba(247, 148, 30, 0.89) 40%, 
+        rgba(247, 148, 30, 0.55) 60%, 
+        rgba(247, 148, 30, 0) 80%,
+        rgba(247, 148, 30, 0.55) 92%,
+        rgba(247, 148, 30, 0.89) 97%,
+        rgb(247, 148, 30) 100% ) !important;
+    }
+    .banner-text-container h1:nth-child(1){
+        font-size: 70px !important;
+        line-height: 60px !important;
+        font-weight: 400;
+    }
+    .banner-text-container p:nth-child(2){
+        font-size: 18px !important;
+        line-height: 30px !important;
+        min-width: 280px !important;
+    }
+    footer .footer .socials{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    footer .footer-links{
+        padding: 0px 15px;
+        justify-content: space-evenly;
+    }
+}
+/* Medium devices (landscape tablets, 768px and up) */ 
+@media screen and (max-width: 991px) and (min-width: 768px){
+    nav{
+        height: 128px !important;
+        width: 100% !important;
+    }
+    nav .left{
+        height: 100%;
+        width: 50% !important;
+    }
+    nav .right{
+        height: 100%;
+        width: 50% !important;
+    }
+
+    .menu-links .image{
+        width: 10%;
+    }
+    .menu-links .links{
+        width: 90%;
+    }
+    .menu-links .links .menu-link{
+        height: fit-content;
+        width: 100%;
+        max-width: 700px;
+        min-width: 280px;
+        padding: 20px 100px 20px 100px;
+    }
+    .menu-links .links .menu-link a{
+        font-size: 50px;
+    }
+    .menu-links .links .menu-link .closebtn{
+        top: 10px;
+        right: 40px;
+        font-size: 50px;
+    }
+    .banner-text-container{
+        padding: 220px 40px 20px;
+    }
+    footer .footer .socials{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+    footer .footer-links{
+        padding: 0px 20px;
+        justify-content: space-evenly;
+    }
+}
+/* Large devices (laptops/desktops, 992px and up) */ 
+@media only screen and (min-width: 992px) {
+    nav{
+        height: 128px !important;
+        width: 100% !important;
+    }
+    nav .left{
+        height: 100%;
+        width: 40% !important;
+    }
+    nav .right{
+        height: 100%;
+        width: 60% !important;
+    }
+    .menu-links .image{
+        width: 10%;
+    }
+    .menu-links .links{
+        width: 90%;
+    }
+    .menu-links .links .menu-link{
+        height: fit-content;
+        width: 100%;
+        max-width: 700px;
+        min-width: 280px;
+        padding: 20px 100px 20px 100px;
+    }
+    .menu-links .links .menu-link a{
+        font-size: 50px;
+    }
+    .menu-links .links .menu-link .closebtn{
+        top: 10px;
+        right: 10px;
+        font-size: 50px;
+    }
+    .banner-text-container{
+        padding: 220px 40px 20px;
+    }
+    footer .footer-links{
+        justify-content: space-between;
+    }
+}
+/* Extra large devices (large laptops and desktops, 1200px and up) */ 
+@media only screen and (min-width: 1200px) {
+}
